# sessy

./: .gitignore  README.md  dune-project  sessy.opam
.context/: architecture.md  implementation-plan.md  prd.md
.github/workflows/: ci.yml
.zenflow/tasks/sessy-implementation-fb69/: plan.md  spec.md
fixtures/: README.md  claude_detail.jsonl  claude_history.jsonl  codex_detail.jsonl  codex_history.jsonl  config.toml
lib/adapter/: claude.ml  codex.ml  decode.ml  dune  sessy_adapter.ml  sessy_adapter.mli  source.mli
lib/core/: config_merge.ml  dune  fuzzy.ml  launch.ml  rank.ml  sessy_core.ml  sessy_core.mli
lib/domain/: dune  sessy_domain.ml  sessy_domain.mli
lib/index/: dune  sessy_index.ml  sessy_index.mli
lib/shell/: config_loader.ml  dune  fs.ml  process.ml  runtime.ml  sessy_shell.ml  sessy_shell.mli
lib/ui/: dune  sessy_ui.ml  sessy_ui.mli
scripts/: benchmark-cold-start.sh  package-linux-musl-docker.sh  package-linux-musl.sh  package-macos.sh
test/: config_loader_profile_identity_test.ml  dune  launch_profile_placeholder_test.ml  test_main.ml
